cargo-features = ["edition", "rename-dependency"]

[package]
name = "tokio-async-await"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
version = "0.1.1"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
documentation = "https://docs.rs/tokio-async-await/0.1.1"
description = """
Experimental async/await support for Tokio
"""
categories = ["asynchronous"]

[workspace]

[lib]
name = "tokio"

[dependencies]
futures = { version = "0.1.23", features = [ "nightly" ] }
tokio = { version = "0.1.8", path = ".." }
tokio-io = { version = "0.1.7", path = "../tokio-io" }
tokio-channel = { version = "0.1.0", path = "../tokio-channel" }
tokio-reactor = { version = "0.1.5", path = "../tokio-reactor" }
futures-core-preview = { version = "0.3.0-alpha.2" }
futures-util-preview = { version = "0.3.0-alpha.2" }
